bugfix // introduced spacing enhancement (padding).

--- a/src/styles/utils/mixin-spacing.scss
+++ b/src/styles/utils/mixin-spacing.scss
@@ -1,15 +1,25 @@
-@mixin spacing($size) {
+@mixin spacing($size, $method: margin) {
+  margin-top: 0;
+
+  @if $method == 'padding' {
+    margin-bottom: 0;
+  }  
+
   @if $size == 's' {
 
-    @include interpolate((margin-bottom), $bp-xs, $bp-m, $vsp-s-min, $vsp-s-max);
+    @include interpolate((#{$method}-bottom), $bp-xs, $bp-m, $vsp-s-min, $vsp-s-max);
   } @else if $size == 'm' {
 
-    @include interpolate((margin-bottom), $bp-xs, $bp-m, $vsp-m-min, $vsp-m-max);
+    @include interpolate((#{$method}-bottom), $bp-xs, $bp-m, $vsp-m-min, $vsp-m-max);
   } @else if $size == 'l' {
 
-    @include interpolate((margin-bottom), $bp-xs, $bp-m, $vsp-l-min, $vsp-l-max);
+    @include interpolate((#{$method}-bottom), $bp-xs, $bp-m, $vsp-l-min, $vsp-l-max);
   } @else if $size == 'xl' {
 
-    @include interpolate((margin-bottom), $bp-xs, $bp-m, $vsp-xl-min, $vsp-xl-max);
+    @include interpolate((#{$method}-bottom), $bp-xs, $bp-m, $vsp-xl-min, $vsp-xl-max);
+  }
+
+  &:last-child {
+    #{$method}-bottom: 0;
   }
 }
